@@ -943,6 +943,8 @@
 #define ID_STATUS_RIGHTFILE_EOL         32968
 #define ID_STATUS_LEFTFILE_EOL          32969
 #define ID_STATUS_FILTER                32970
+#define ID_STATUS_LEFTFILE_ENCODING     32971
+#define ID_STATUS_RIGHTFILE_ENCODING    32972
 #define ID_DIR_ZIP_LEFT                 32976
 #define ID_DIR_ZIP_RIGHT                32977
 #define ID_DIR_ZIP_BOTH                 32978
