@@ -7,6 +7,7 @@ WinMerge 2.7.7.5
   Right-align tab size number in editor options (r5037)
   Move Time difference ignore -option to compare options (#1892283)
   Add option to select temporary folder (#1893167)
+  Show file encoding in file compare statusbar (#1895629)
   BugFix: Potential lockup in folder compare (#1865131, #1889907)
   BugFix: Line filter didn't filter non-ascii lines correctly (#1880628)
   BugFix: GNU General Public License name in menu (#1868989)
